fixed contact info spacing

--- a/assets/less/contact-page.less
+++ b/assets/less/contact-page.less
@@ -61,7 +61,7 @@
 		.contact-info {
 			display: flex;
 			padding-top: 36px;
-			justify-content: flex-end;
+			justify-content: space-between;
 
 			.address {
 				max-width: 220px;
