--- a/style.css
+++ b/style.css
@@ -1284,7 +1284,7 @@ body.home .products .products-container .product-item span {
 .page-template-contacts .contact-page .contact-info {
   display: flex;
   padding-top: 36px;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 .page-template-contacts .contact-page .contact-info .address {
   max-width: 220px;
